# dioxus_tutorial

./: Cargo.toml  dogs.txt  hotdog.db
assets/: main.css
src/: backend.rs  main.rs
src/components/: favorites.rs  nav.rs
